--- a/sed-challenge-script.yml
+++ b/sed-challenge-script.yml
@@ -1,10 +1,58 @@
-import re
+--
+- hosts: localhost
+  connection: local
+  gather_facts: False
+  tasks:
+    - name: Setting up Security/Firewall Group
+      ec2_group:
+         name: default
+         description: Rules Allowing Traffic on port 22 and 80 and 443
+         region: us-east-1
+         rules:
+          - proto: tcp
+            from_port: 80
+            to_port: 80
+            cidr_ip: 0.0.0.0/0
+          - proto: tcp
+            from_port: 443
+            to_port: 443
+            cidr_ip: 0.0.0.0/0
+          - proto: tcp
+            from_port: 22
+            to_port: 22
+            cidr_ip: 0.0.0.0/0
+          - proto: icmp
+            from_port: -1
+            to_port: -1
+            cidr_ip: 0.0.0.0/0
+         rules_egress:
+          - proto: all
+            cidr_ip: 0.0.0.0/0
+
+    - name: Provision a EC2 Instance
+      ec2:
+         key_name: test
+         region: us-east-1
+         instance_type: t2.micro
+         image: ami-011b3ccf1bd6db744
+         wait: yes
+         wait_timeout: 500
+         count: 1
+         instance_tags:
+           Name: Webserver
+           Owner: Vamshi
+         volumes:
+          - device_name: /dev/xvdb
+            volume_type: gp2
+            volume_size: 2
+         monitoring: no
+         vpc_subnet_id: ssubnet-30d14a1e
+         assign_public_ip: yes
+         group: default
+      register: ec2_out
+
+    - name: Wait for SSH to come up
+      wait_for: host={{ item.public_dns_name }} port=22 delay=60 timeout=320 state=started
+      with_items: '{{ec2_out.instances}}'
 
 
-for _ in range(int(input())):
-    cc_number = input()
-
-    if re.match(r"^[456]([\d]{15}|[\d]{3}(-[\d]{4}){3})$", cc_number) and not re.search(r"([\d])\1\1\1", cc_number.replace("-", "")):
-        print("Valid")
-    else:
-        print("Invalid")
